fixup! Display album entries in a regular grid instead using natural size and overflow

--- a/oldalbum.web.frontend/src/main/frontend/src/App.css
+++ b/oldalbum.web.frontend/src/main/frontend/src/App.css
@@ -32,6 +32,12 @@
     display: flex;
 }
 
+.album-entry-album {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .table-condensed {
     font-size: 11px;
 }
